Update AnimateScroll CSS link to use CDN

--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
   />
 
   <!-- AnimateScroll library -->
-  <link rel="stylesheet" href="AnimateScroll.css">
+  <link rel="stylesheet" href="https://ulrischa.github.io/AnimateScroll/AnimateScroll.css">
 
   <style>
     /* Demo layout styling (not part of AnimateScroll.css) */
